<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn Android</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	<string name="action_feedback">Feedback</string>
	<string name="action_share">Share with friends</string>
	<string name="action_help">Help</string>
	<string name="action_search">Search</string>
	<string name="action_settings">Settings</string>
	<string name="theme_preference_key">theme_selector</string>
	<string name="primary_color_preference_key">primary_color_selector</string>
	<string name="primary_color_dark_preference_key">primary_color_dark_selector</string>
	<string name="accent_color_preference_key">accent_color_selector</string>

</resources>